# denote

./: .gitignore  Cargo.toml  README.md  TODO  git-pre-push  pyproject.toml  pytest.ini
python/: test_denote.py
src/: cli.rs  lib.rs  main.rs  python.rs
tests/: test_denote.py
