[package]
name = "denote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8.24"
thiserror = "1.0.31"

[dev-dependencies]
tempfile = "3.3.0"
