[package]
name = "denote"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.0", features = ["derive"] }
lazy_static = "1.4.0"
pathdiff = "0.2.1"
regex = "1.6.0"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8.24"
tempfile = "3.3.0"
thiserror = "1.0.31"
time = { version = "0.3.11", features = ["std", "formatting", "macros"] }

[dev-dependencies]
